impl hosts get rooms
